# Agent-WatchDog-Pro

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  start-demo.sh  watchdog.toml
.cargo/: config.toml
.github/: copilot-instructions.md
agent-watchdog/: Cargo.toml
agent-watchdog-common/: Cargo.toml
agent-watchdog-common/src/: lib.rs
agent-watchdog-ebpf/: Cargo.toml
agent-watchdog-ebpf/.cargo/: config.toml
agent-watchdog-ebpf/src/: main.rs
agent-watchdog/src/: api.rs  audit.rs  audit_db.rs  config.rs  event_store.rs  main.rs  normalizer.rs  path_resolver.rs  policy.rs  prompt_detector.rs  proxy.rs  risk.rs
browser-extension/: README.md  background.js  content.js  manifest.json  options.html  options.js  page-hook.js  popup.html  popup.js  rules.json  styles.css
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/app/: agentApi.ts  api.ts  firewallApi.ts  routes.ts
dashboard/src/app/components/: Layout.tsx
dashboard/src/app/data/: mockData.ts
dashboard/src/app/pages/: AgentDemo.tsx  Configuration.tsx  Dashboard.tsx  Events.tsx  Firewall.tsx  LiveDemo.tsx  Processes.tsx
dashboard/src/app/types/: index.ts
demo/: run_demo.sh
docs/: LAUNCH-WEEK-CALENDAR.md  OPEN_SOURCE-GTM-PLAN.md  SOCIAL-POSTS-LAUNCH-ZH-EN.md  SOCIAL-POSTS-LAUNCH.md  THREAT_MODEL.md
mock-server/: firewall.ts  scenarios.ts
sdk/python/: agent_firewall.py
tests/: attack_simulation.py  demo_reliability.py  test_firewall.sh  test_firewall_mock.py
xtask/src/: main.rs
