[package]
name = "agent-watchdog-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-watchdog-common = { path = "../agent-watchdog-common" }
aya-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }

[[bin]]
name = "agent-watchdog"
path = "src/main.rs"

# ── Profile settings ──────────────────────────────────────────────
# eBPF programs MUST be compiled with optimisations enabled.
# The Linux eBPF verifier rejects most debug-level code because it
# produces too many instructions and unsupported constructs.

[profile.dev]
opt-level = 2
debug = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[profile.release]
opt-level = 2
debug = false
lto = true
panic = "abort"
codegen-units = 1

[workspace]
# Intentionally left as a standalone workspace.
# This crate targets bpfel-unknown-none and is built separately
# via `cargo xtask build-ebpf`.
