[package]
name = "agent-watchdog"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
agent-watchdog-common = { path = "../agent-watchdog-common", features = ["user"] }
aya = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }

[[bin]]
name = "agent-watchdog"
path = "src/main.rs"
