[package]
name = "agent-watchdog"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
agent-watchdog-common = { path = "../agent-watchdog-common", features = ["user"] }
aya = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
futures = "0.3"
libc = "0.2"
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "time", "sync"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "agent-watchdog"
path = "src/main.rs"
